# biobb_workflows

./: .gitignore  .gitmodules  README.md  environment.yml  environment_ambertools.yml  environment_md.yml  environment_vina.yml  environment_vs.yml  pyproject.toml
.ipynb_checkpoints/: biobb_cluster_cavity_docking-checkpoint.ipynb  eucanshareHTVS_part1-checkpoint.ipynb
1.MD_setup_mutation/: .gitignore  README.md  biobb_md_setup_mutation.py  environment.yml  input.yml  input_HPC.yml  input_local.yml  log.out  log1.out  run.sh  run_HPC.sl  run_local.sh
2.Cluster_cavity_docking/: biobb_cluster_cavity_docking.py  environment.yml
2.Clustering_CavityAnalysis/: README.md  biobb_clustering_cavity_analysis.py  environment.yml  input.yml  run.sh  run_local.sh
3.Docking_HTVS/: README.md  bad_run.txt  biobb_docking_htvs.py  environment.yml  good_run.txt  input.yml  last_run.txt  ligand_lib.txt  run.sh  run_local.sh
4.Pocket_VS/: README.md  biobb_docking_htvs.py  biobb_pocket_vs.py  htvs_input.yml  input.yml  run_local.sh
EUCANSHARE/: README.md
EUCANSHARE/1.MD_setup_mutation/: README.md  biobb_md_setup_mutation.py  biobb_md_setup_mutation_pycompss.py  environment.yml  input_HPC.yml  input_local.yml  install_env.sh  run_HPC.sh  run_local.sh
EUCANSHARE/2.Clustering_CavityAnalysis/: README.md  biobb_clustering_cavity_analysis.py  input.yml  run_local.sh
EUCANSHARE/3.Docking_HTVS/: biobb_docking_htvs.py  biobb_docking_htvs_mp.py  input.yml  run_HPC.sl  run_local.sh
EUCANSHARE/Single_protein_wfs/: README.md
OTHER/4.Pocket_VS/: biobb_clustering_cavity_analysis.py  biobb_docking_htvs.py  biobb_docking_htvs_mp.py  biobb_pocket_vs.py  cavity_input.yml  environment.yml  htvs_input.yml  input.yml  run_local.sh
OTHER/5.SuMD/: README.md  biobb_SuMD.py  environment.yml  input.yml  input_HPC_GPU.yml  input_HPC_MPI.sl  input_HPC_MPI.yml  run_HPC_GPU.sl  run_HPC_MPI.sl  run_local.sh
Other/4.Pocket_VS/: biobb_pocket_vs.py
Other/5.SuMD/: biobb_SuMD.py  input_HPC_GPU.yml  input_HPC_MPI.yml  run_HPC_GPU.sl  run_HPC_MPI.sl
Other/Pocket_VS/: biobb_clustering_cavity_analysis.py  input.yml
Other/SuMD/: README.md  biobb_SuMD.py  environment.yml  input.yml  input_HPC_GPU.yml
Protein_interface/: README.md
Protein_interface/1.PP_docking/: run_HPC.sl
Protein_interface/2.Pose_refinement/: README.md  input_HPC.yml  run_HPC.sl
Protein_interface/3.Cavity_analysis/: README.md  biobb_cavity_analysis.py  environment.yml  run_HPC.sl
Protein_interface/4.Virtual_screening/: README.md  run_HPC.sl
Protein_interface/PP_docking/: README.md  biobb_pp_docking.py
Single_protein/: README.md
Single_protein/0.Ligand_parameterization/: workflow.py
Single_protein/1.MD_with_gromacs/: README.md  biobb_md_setup_mutation.py  environment.yml  environment_detailed.yml  input_HPC.yml  launch_long_MD.sh  run_HPC.sl  run_HPC_HIS.sl
Single_protein/MD_amber/: README.md  (+4 more)
biobb_workflows/: README.md
euCanSHare/: README.md
euCanShare/: README.md
(+228 files in other folders)
